front page jumping over header on low res, fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -335,6 +335,12 @@ footer > hr {
 /* logo and top nav container for mobile */
 header {
  grid-column: 1 / 3;
+ 
+}
+@media only screen and (max-width: 505px) { 
+  header {
+    margin-bottom: -25px !important;
+  }
 }
 #header-top {
  padding: 0px;
@@ -1022,6 +1028,8 @@ dl dt {
  align-items: center;
  text-align: center;
  grid-column: 1/3;
+ margin-top: 133px;
+ margin-bottom: 20px;
 }
 .main-page-box:nth-child(even) {
  background-color: var(--sg);
